Add a download button to the dict. viewer

--- a/ui/src/locales/common_de.json
+++ b/ui/src/locales/common_de.json
@@ -52,6 +52,7 @@
   "rendered": "Gerenderter Text",
   "xmlView": "XML-Ansicht",
   "exportXml": "XML exportieren",
+  "exportDict": "Wörterbuch exportieren",
   "documentApproved": "Dokument bestätigt",
   "backToHome": "Zurück zur Startseite",
   "submitApproval": "Bestätigung durchführen",
