Download accumulated changes

--- a/ui/src/locales/common_de.json
+++ b/ui/src/locales/common_de.json
@@ -53,6 +53,7 @@
   "xmlView": "XML-Ansicht",
   "exportXml": "XML exportieren",
   "exportDict": "Wörterbuch exportieren",
+  "exportChanges": "Änderungen exportieren",
   "documentApproved": "Dokument bestätigt",
   "backToHome": "Zurück zur Startseite",
   "submitApproval": "Bestätigung durchführen",
