Add applying changes to an XML file

--- a/ui/src/locales/common_de.json
+++ b/ui/src/locales/common_de.json
@@ -220,5 +220,7 @@
   "uploadDictionary": "Wörterbuch hochladen",
   "macroeditor": "Makroeditor",
   "changes": "Änderungen",
-  "uploadChanges": "Änderungen hochladen"
+  "uploadChanges": "Änderungen hochladen",
+  "textEditor": "Texteditor",
+  "uploadText": "Text hochladen"
 }
