--- a/ui/src/locales/common_en.json
+++ b/ui/src/locales/common_en.json
@@ -222,5 +222,6 @@
   "changes": "Changes",
   "uploadChanges": "Upload changes",
   "textEditor": "Text editor",
-  "uploadText": "Upload text"
+  "uploadText": "Upload text",
+  "clearChangesList": "Clear changes list"
 }
