Add (un)fold all button in the dict. viewer

--- a/ui/src/locales/common_de.json
+++ b/ui/src/locales/common_de.json
@@ -223,5 +223,7 @@
   "uploadChanges": "Änderungen hochladen",
   "textEditor": "Texteditor",
   "uploadText": "Text hochladen",
-  "clearChangesList": "Liste der Änderungen leeren"
+  "clearChangesList": "Liste der Änderungen leeren",
+  "unfoldAll": "Alle aufklappen",
+  "foldAll": "Alle zuklappen"
 }
