Display a list of suffixes and enclitics in a separate tab

--- a/ui/src/locales/common_de.json
+++ b/ui/src/locales/common_de.json
@@ -227,5 +227,6 @@
   "unfoldAll": "Alle aufklappen",
   "foldAll": "Alle zuklappen",
   "exportEnglishTranslations": "Englische Glossen exportieren",
-  "uploadEnglishTranslations": "Englische Glossen hochladen"
+  "uploadEnglishTranslations": "Englische Glossen hochladen",
+  "suffixDictionary": "Suffixe"
 }
