--- a/ui/src/locales/common_en.json
+++ b/ui/src/locales/common_en.json
@@ -227,5 +227,6 @@
   "unfoldAll": "Unfold all",
   "foldAll": "Fold all",
   "exportEnglishTranslations": "Export English translations",
-  "uploadEnglishTranslations": "Upload English translations"
+  "uploadEnglishTranslations": "Upload English translations",
+  "suffixDictionary": "Suffixes"
 }
